<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.views.fragment.alerts.AlertDetailFragment"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_alert_recycler_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_recycler_nombre"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_alert_recycler_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/alert_recycler_fecha"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_alert_recycler_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/alert_recycler_descripcion"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>